# grove

./: .gitignore  CONTRIBUTING.md  Justfile  README.md  biome.json  knip.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/api/: claude.rs  clone.rs  commit.rs  config.rs  diff.rs  launch.rs  mod.rs  rebase.rs  remote.rs  repo.rs  staging.rs  worktree.rs
src-tauri/src/domain/: claude.rs  commit.rs  config.rs  diff.rs  error.rs  mod.rs  rebase.rs  repo.rs  worktree.rs
src-tauri/src/infra/: git_repo.rs  mod.rs
src-tauri/src/infra/claude/: mod.rs
src-tauri/src/infra/persistence/: config.rs  mod.rs  repo_store.rs
src-tauri/src/infra/query/: diff.rs  history.rs  mod.rs  status.rs  worktree.rs
src-tauri/src/infra/repository/: clone.rs  commit.rs  mod.rs  rebase.rs  remote.rs  staging.rs  worktree.rs
src-tauri/src/service/: claude.rs  clone.rs  commit.rs  config.rs  diff.rs  launch.rs  mod.rs  rebase.rs  remote.rs  repo.rs  staging.rs  worktree.rs
src/api/: claude.ts  clone.ts  commit.ts  config.ts  diff.ts  launch.ts  rebase.ts  remote.ts  repo.ts  staging.ts  worktree.ts
src/components/ui/: dropdown-menu.tsx  tooltip.tsx
src/features/claude/: index.ts
src/lib/: utils.ts
(+34 files in other folders)
