[package]
name = "grove"
version = "0.1.0"
edition = "2021"
description = "A worktree-first Git GUI"
license = "GPL-3.0-or-later"

[lib]
name = "grove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
glob = "0.3"
tempfile = "3.27.0"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
